--- a/Gsap Landing Pages/Landing-Page-001/style.css
+++ b/Gsap Landing Pages/Landing-Page-001/style.css
@@ -186,7 +186,7 @@ body {
     font-family: "serif";
     overflow: hidden;
     width: 500px;
-    height: 70px;
+    height: 50px;
     position: absolute;
     left: -7%;
 
@@ -194,16 +194,12 @@ body {
     z-index: 999;
 }
 
-.paragraph .paragraph-div{
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    bottom:-90px;
-}
-
 .paragraph p {
     font-size: 1rem;
     font-weight: 200;
+    bottom: -20px;
+    opacity: 0;
+    position: absolute;
 }
 
 
